show post swaggar success
